# gencdna

./: .buildinfo  .gitattributes  .gitignore  Makefile  README.md  all_genes_exons.html  blast_out.tsv  blast_out.txt  exons.html  genindex.html  index.html  mypy.ini  next_steps.html  notes.txt  objects.inv  package_structure.html  pyproject.toml  search.html  searchindex.js  setup.cfg  synthetic_reads.html  test.fasta  test_exons.fasta  tmp.fastq  tmp.txt  usearch.aln  usearch_out.tsv  vsearch  wgs_bowtie.html  wgs_bwa.html
.doctrees/: all_genes_exons.doctree  environment.pickle  exons.doctree  index.doctree  next_steps.doctree  package_structure.doctree  synthetic_reads.doctree  wgs_bowtie.doctree  wgs_bwa.doctree
.github/: install-blast.yml
_sources/: all_genes_exons.rst.txt  wgs_bowtie.rst.txt
config/: bed.yml  blast.yml  blast_format.yml  bowtie2.yml  cutadapt.yml  genes.yml  genome_browser.yml  usearch.yml
docs/: conf.py  index.rst
gencdna/: alignment_output.py  bash.py  blast_parsing.py  count_unique_reads.py  exon_map.py  exon_parser.py  expected_error_filter.py  external_calls.py  fasta_stats.py  fasta_summary.py  fastq_summary.py  fastx_summary.py  human_assembly.py  pcr_primer_filter.py  phred_scores.py  repeat_bases.py  repeated_bases.py  sam.py  synthetic_reads.py  ucsc_html_parser.py
pacbio_qc/: bash.py  blast.py  count_unique_reads.py  fasta_stats.py  fastx.py  pcr_primer_filter.py  phred_scores.py  repeated_bases.py
tests/: conftest.py  test_alignment.py  test_blast.py  test_count_unique_reads.py  test_fasta_stats.py  test_pcr_primer_filter.py  (+2 more)
(+195 files in other folders)
